# goquant-oracle

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20231101_init.sql
service/: .env  Cargo.toml
service/sqlx-migrations/: V1__create_price_history.sql
service/src/: aggregator.rs  app.rs  main.rs  models.rs  oracle_client.rs  routes.rs  storage.rs
